--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,29 @@
 on:
-    release:
-      types: [published]
-  
+  release:
+    types: [published]
+
 env:
-    CDN_TOKEN: ${{secrets.CDN_TOKEN}}
+  CDN_TOKEN: ${{secrets.CDN_TOKEN}}
+
+permissions:
+  actions: write
+  contents: write
 
 jobs:
-    trigger-cdn-update:
-        runs-on: ubuntu-latest
 
-        steps:
-        - name: Make CDN Update Request
-          run: |
-            curl "https://cdn.unyt.org/update/$GITHUB_REPOSITORY?token=$CDN_TOKEN"
+  trigger-cdn-update:
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: Edit Release  
+        uses: irongut/EditRelease@v1.2.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          id: ${{ github.event.release.id }}
+          replacebody: false
+          body: "Commit Hash: ${{ github.sha }}"
+
+      - name: Make CDN Update Request
+        run: |
+          curl "https://cdn.unyt.org/update/$GITHUB_REPOSITORY?token=$CDN_TOKEN"
