update to uix 0.4

--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,10 @@
 {
-	"importMap": "./importmap.dev.json",
+	"importMap": "./importmap.json",
 	"compilerOptions": {
 		"jsx": "react-jsx",
 		"jsxImportSource": "uix",
 		"lib": [
+			"dom",
 			"deno.window",
 			"esnext"
 		]
